WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231614
[LFC][IFC] Inline box boundaries should not prevent trailing whitespace collapsing
https://bugs.webkit.org/show_bug.cgi?id=231614
Summary
[LFC][IFC] Inline box boundaries should not prevent trailing whitespace colla...
alan
Reported
2021-10-12 14:10:09 PDT
ssia
Attachments
Patch
(2.10 KB, patch)
2021-10-12 14:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-10-12 14:13:58 PDT
Created
attachment 440979
[details]
Patch
EWS
Comment 2
2021-10-12 18:10:50 PDT
Committed
r284073
(
242901@main
): <
https://commits.webkit.org/242901@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440979
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-10-12 18:11:21 PDT
<
rdar://problem/84175846
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug