[LFC][IFC] Inline box boundaries should not prevent trailing whitespace collapsing https://bugs.webkit.org/show_bug.cgi?id=231614

Reviewed by Antti Koivisto.

This is currently papered over by webkit.org/b/231581 (not testable).

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::append):


Canonical link: https://commits.webkit.org/242901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284073 268f45cc-cd09-0410-ab3c-d52691b4dbfc